# blog-api-test-task

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  add_data_to_db.py  create_json_file.py  data_module.py  db_url.sample.py  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  script_del_data_db.py  wait-for-it.sh
alembic/: env.py
alembic/versions/: 2024_05_21_1117-966151e38bca_create_authors_table.py  2024_05_21_1133-06ea94b021b9_create_profiles_table.py  2024_05_21_1326-0728656731d3_create_categories_table.py  2024_05_21_1736-858c2b5295cf_create_posts_table.py  2024_05_21_1943-c849f56c5e83_create_tags_table_and_association_with_.py
src/core/conf/: caching.py  config.py  logging_config.py  utils.py
src/core/database/db_settings/: db_helper.py
src/core/database/models/: __init__.py  authors.py  categories.py  enums.py  mixins.py  post_tag_association.py  posts.py  profiles.py  tags.py  utils.py
src/repositories/: authors.py  categories.py  posts.py  profiles.py  tags.py
src/routes/: __init__.py  auth.py  authors.py  categories.py  posts.py  tags.py
src/schemas/: authors.py  categories.py  posts.py  profiles.py  tags.py
src/services/: auth.py  cache_in_redis.py  roles.py  security.py  validation.py
